<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/return_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/back_button"
            android:clickable="true"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:focusable="true" />


    </LinearLayout>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/register2"
            android:textColor="@color/black"
            android:fontFamily="@font/comfortaa_medium"
            android:textSize="36sp">

        </androidx.appcompat.widget.AppCompatTextView>

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gmail"
            android:fontFamily="@font/roboto_bold"
            android:textSize="18sp"
            android:background="@drawable/edit_text_background"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp">

        </androidx.appcompat.widget.AppCompatEditText>
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/roboto_bold"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:background="@drawable/edit_text_background"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp">

        </androidx.appcompat.widget.AppCompatEditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:text="@string/next"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white"
            android:background="@drawable/next_button"
            android:textSize="13sp"/>
        
    </LinearLayout>
    


</LinearLayout>