<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <LinearLayout
       android:id="@+id/ln1"
       android:layout_width="match_parent"
       android:layout_height="600dp"
       android:orientation="vertical"
       android:background="@drawable/rectangle_background">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <androidx.appcompat.widget.AppCompatImageView
               android:layout_width="38dp"
               android:layout_height="38dp"
               android:background="@drawable/union_logo_1"
               android:layout_marginTop="250dp"
               android:layout_marginStart="80dp"/>

           <androidx.appcompat.widget.AppCompatImageView
               android:layout_width="38dp"
               android:layout_height="38dp"
               android:background="@drawable/union_logo_2"
               android:layout_marginTop="250dp"
               android:layout_marginStart="-39dp"/>

           <androidx.appcompat.widget.AppCompatTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/photo"
               android:fontFamily="@font/comfortaa_medium"
                android:textColor="@color/black"
               android:layout_marginTop="225dp"
               android:layout_marginStart="40dp"
               android:textSize="48sp"
               />

       </LinearLayout>






   </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_in"
            android:layout_width="167dp"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/log_in_button"
            android:text="@string/log_in"
            android:fontFamily="@font/roboto_bold"
            android:textSize="15sp">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="167dp"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/register"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white"
            android:background="@drawable/register_button">

        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:src="@drawable/just_shape">

    </androidx.appcompat.widget.AppCompatImageView>


</LinearLayout>